--- a/src/components/Timer.css
+++ b/src/components/Timer.css
@@ -2,6 +2,10 @@
 
 }
 
+.countdown-timer__input {
+  height: 35px;
+}
+
 .countdown-timer__warning {
   font-size: 15px;
   line-height: 15px;
@@ -15,7 +19,7 @@
 .countdown-timer__warning span {
   position: absolute;
   left: 20px;
-  top: 15px;
+  top: 12px;
 }
 
 .countdown-timer__time {
@@ -35,5 +39,5 @@
   height: 35px;
   margin-right: 15px;
   font-weight: bold;
-  font-size: 16px;
+  font-size: 14px;
 }
