--- a/src/components/Timer.css
+++ b/src/components/Timer.css
@@ -42,3 +42,25 @@
   font-size: 14px;
   color: rgb(105, 105, 105) !important;
 }
+
+.countdown-timer__time__under-ten {
+  animation: blinkingText 0.3s infinite;
+}
+
+@keyframes blinkingText{
+  0% {
+    color: red;
+  }
+  49% {
+    color: red;
+  }
+  60% {
+    color: transparent;
+  }
+  99% {
+    color:transparent;
+  }
+  100% {
+    color: red;
+  }
+}
